# regelum-control

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .python-version  .ruff.toml  LICENSE  README.md  README.rst  REVIEW.txt  asgn_3_ppo.rst  casadi_rhs (2).txt  dl.py  docker-compose.yaml  get_algo_name.py  klines.csv  launch.json  mkdocs.yml  mp_test.py  opt-docs.ipynb  opt.py  pyproject.toml  pytest.ini  quick-start.py  rcognita.code-workspace  rename.sh  requirements-dev.txt  requirements.txt  setup.py  test.py  test.rst  test_cartpole.py  test_integrator.py  test_sampler.ipynb  test_task.py  user_settings.yaml
docs/: .buildinfo  A tour of available presets.html  README.html  README.md  api.html  batch_samplers.html  controllers.html  genindex.html  index.html  index.md  introduction.html  modules.html  objects.inv  optimizable.html  py-modindex.html  rc.html  references.md  search.html  searchindex.js  systems.html  systems_tutorial.html  tutorial.md  tutorials.html
docsrc/: A tour of available presets.rst  Makefile  Osinenko2023habil.html  api.rst  batch_samplers.rst  conf.py  controllers.rst  index.rst  introduction.rst  modules.rst  optimizable.rst  rc.rst  replace_colors.py  ssl__tmp.txt  strip_readme.py  systems.rst  systems_tutorial.rst  tutorials.rst
gfx/: flowchart.drawio
pipelines/: FigureObject.fig.pickle  cached.json  conf.py  config_blueprints.py  pipeline_2tank.py  pipeline_3wrobot.py  pipeline_3wrobot_LF.py  pipeline_3wrobot_NI.py  pipeline_3wrobot_NI_casadi.py  pipeline_3wrobot_NI_torch.py  pipeline_3wrobot_casadi.py  pipeline_CALF_3wrobot.py  pipeline_CALF_3wrobot_NI.py  pipeline_CALF_3wrobot_predictive.py  pipeline_blueprints.py  pipeline_grid_world.py  pipeline_inverted_pendulum_AC.py  pipeline_inverted_pendulum_AC_async.py  pipeline_inverted_pendulum_PG.py  pipeline_inverted_pendulum_RQL.py  run.py  t.py
playground/: collect_folders.py  preset_endpoint.py  run_stable.py  vscode_launch_json_template.txt
presets/: .zhores_calf.sh.swp  3wrobot.py  3wrobot_ni.py  Gor_ddqn.sh  Gor_dqn_expl_0.sh  Kolmogorov_dqn_expl_0_15.sh  callbacks_at_episode_10.dill  callbacks_at_episode_5.dill  callbacks_at_episode_9.dill  collect_folders.py  ddpg.sh  grid_world.py  inverted_pendulum.py  launch.txt  output.pickle  plots.ipynb  ppo.sh  preset_endpoint.py  recover.py  reinforce.sh  reproduce.py  run.py  run_all.sh  run_stable.py  sdpg.sh  test.py  test_calf.sh  valconfig.yaml  validate.py  zhores_calf.sh
prototyping/: preset_endpoint.py
rcognita/: ROS_harnesses.py  Reinforcement Learning course.code-workspace  _Plugins__fake_file_config_source.py  __fake_config_loader_impl.py  __fake_plugins.py  __fakeantlr4.py  __gui_server.py  __hydra_main.py  __init__.py  __instantiate.py  __internal_utils.py  __obstacles_parser.py  __t.py  __utilities.py  __w_plotting.py  actors.py  adaptation_block.py  adaptation_blocks.py  animators.py  base.py  callback.py  callbacks.py  controller.py  controllers.py  critic.py  critics.py  data_buffers.py  estimators.py  loggers.py  model.py  models.py  objective.py  objectives.py  observer.py  observers.py  optimizers.py  planners.py  policies.py  policy.py  predictor.py  (+13 more)
regelum/: __init__.py  __utilities.py  adaptation_block.py  animation.py  callback.py  configure.py  constraint_parser.py  controller.py  critic.py  event.py  model.py  node.py  objective.py  observer.py  pipeline.py  planner.py  policy.py  predictor.py  scenario.py  simulator.py  stopping_criterion.py  system.py  typing.py  utilities.py  utils.py
research/: casadi_calf_2tank.yaml  casadi_calf_3wrobot.yaml  casadi_mpc_3wrobot.yaml  example.yaml  preset_endpoint.py  recover.py  sarsa_3wrobot.yaml  torch_calf_3wrobot.yaml  torch_mpc_3wrobot.yaml  torch_mpc_3wrobot_ni.yaml  torch_rpo_3wrobot.yaml  torch_sarsa_3wrobot.yaml
(+2877 files in other folders)
