[tool.poetry]
name = "regelum-control"
package-mode = true
version = "0.3.0"
description = "Regelum is a flexibly configurable framework for agent-environment simulation with a menu of predictive and reinforcement learning pipelines."
authors = ["Georgiy Malaniya <pwlsd.gm@gmail.com> Anton Bolychev <bolychev.anton@gmail.com> Grigoriy Yaremenko <yaremenko8@gmail.com> Pavel Osinenko <p.osinenko@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "regelum" },
]

[tool.poetry.dependencies]
python = "^3.9"
torch = ">=1.13.1"
numpy = "^1.26.4"
scipy = "^1.12.0"
omegaconf = "^2.3.0"
gitpython = "^3.1.42"
mlflow = "=2.4.1"
pandas = "^2.2.1"
tables = "^3.9.2"
pyqt5 = "5.15.10"
pyqt5-qt5 = "=5.15.2"
casadi = "^3.6.5"
cues = "^0.3.0"
svgpathtools = "^1.6.1"
dill = "^0.3.8"
matplotlib = "^3.8.3"
svgpath2mpl = "^1.0.0"
plotly = "^5.20.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.1"
pytest-xdist = "^2.5.0"
pytest-lazy-fixture = "^0.6.3"
black = "^24.3.0"
ruff = "^0.3.3"
pre-commit = "^3.6.2"
mkdocs-material = {git = "https://github.com/osinenkop/remkdocs-material-insiders.git", rev = "master"}
mkdocstrings = {git = "https://github.com/osinenkop/remkdocstrings-python.git", rev = "master"}
mkdocs-autorefs = "^1.0.1"
mkdocs-gen-files = "^0.5.0"
mkdocs-section-index = "^0.3.8"
mkdocs-literate-nav = "^0.6.1"
pdf2image = "^1.17.0"
typer = "^0.9.0"
beautifulsoup4 = "^4.12.3"
termynal = "^0.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
